eclipseWorkspace/AK SFDC/src/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>For_Internal_Use_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For Internal Use Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesforce_Linked_Contact_ID__c</fullName>
        <label>Salesforce Linked Contact ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Linked_Opportunity_ID__c</fullName>
        <label>Salesforce Linked Opportunity ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bh_DocID__c</fullName>
        <externalId>true</externalId>
        <label>bh_DocID</label>
        <length>16</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>